--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -176,6 +176,25 @@
   margin-bottom: 24px;
 }
 
+.button-buy-success {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 14px 16px;
+  gap: 8px;
+  width: 100%;
+  height: 50px;
+  background: #fdd116;
+  border-radius: 2px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 140%;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+}
+
 .popup-connect {
   position: fixed;
   background: #fff;
