--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,4 +5,26 @@
 body {
   max-width: 375px;
   margin: auto;
+  font-family: "Comfortaa", cursive !important;
+}
+
+.wallet-adapter-button {
+  margin-top: 24px !important;
+  flex-direction: row !important;
+  justify-content: center !important;
+  padding: 14px 16px !important;
+  gap: 8px;
+  width: 100%;
+  height: 50px !important;
+  background: #fdd116 !important;
+  border-radius: 2px;
+  font-weight: 700 !important;
+  font-size: 16px !important;
+  line-height: 140% !important;
+  display: flex;
+  align-items: center !important;
+  text-transform: capitalize;
+  letter-spacing: 0px !important;
+  color: black !important;
+  font-family: "Comfortaa", cursive !important;
 }
